--- a/MyARPG/Config/DefaultEngine.ini
+++ b/MyARPG/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
-EditorStartupMap=None
+EditorStartupMap=/Game/NewMap.NewMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -57,7 +57,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=691E1A8A45DEFDE9B67977B3ED48C7B4
+SecurityToken=DDA71D2F4EE2745FD3A1FDAF17486F91
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
